--- a/public_html/css/surveys.css
+++ b/public_html/css/surveys.css
@@ -13,7 +13,7 @@ and open the template in the editor.
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url("../img/index-background.png") no-repeat fixed;
+    background: url("../img/background-surveys.png") no-repeat fixed;
     background-size: 100% 100%;
 }
 
@@ -56,6 +56,7 @@ and open the template in the editor.
     border-radius: 22px;
     border-left: none;
     border-right: none;
+    color: #E3E2E1;
 }
 
 .navbar-collapse{
