--- a/public_html/css/surveyInterface.css
+++ b/public_html/css/surveyInterface.css
@@ -106,3 +106,9 @@ body{
     overflow-y: auto;
     height: 100%;
 }
+
+.slider-number-container{
+    width: 100%;
+    height: 35px;
+    text-align: center;
+}
