font-size incremented, question font changed to bold type, font aligned in radio button and checkbox

--- a/public_html/css/surveyInterface.css
+++ b/public_html/css/surveyInterface.css
@@ -96,6 +96,14 @@ body{
     display: flex;
 }
 
+.questionContainer div.radio{
+    line-height: 1.12857143;
+}
+
+.questionContainer textarea{
+    font-size: 17px;
+}
+
 .bx-wrapper{
     height: 97%;
     padding-right: 50px;
