--- a/public_html/css/surveyInterface.css
+++ b/public_html/css/surveyInterface.css
@@ -28,7 +28,7 @@ body{
     float:none;
 }
 .navbar-title{
-    
+
 }
 .navbar.message-mode .survey-title{
     display: none;
@@ -80,7 +80,7 @@ body{
 .message-container .button-wrapper{
     position: absolute;
     top: 50%;
-    
+
 }
 .surveyBuilderContainer{
     height: 90% !important;
@@ -105,7 +105,7 @@ body{
 }
 
 div.question{
-   font-size: 25px; 
+    font-size: 25px; 
 }
 
 .bx-wrapper{
@@ -139,4 +139,14 @@ div.question{
 
 .rating-md{
     font-size: 2.13em;
+}
+
+.privacy-embed{
+    margin: 0 auto;
+    display: block;
+}
+
+.agree-privacy img{
+    display: inline;
+    cursor: pointer;
 }
