--- a/public_html/css/sync.css
+++ b/public_html/css/sync.css
@@ -15,3 +15,28 @@ and open the template in the editor.
 .result-container{
     min-height: 270px;
 }
+
+.navbar{
+    background-color: #E60000;
+    min-height: 85px;
+    display: flex;
+    align-items: center;
+    padding-right: 30px;
+}
+
+.navbar-header {
+    float: left;
+    padding: 15px;
+    text-align: center;
+    width: 100%;
+}
+.navbar-brand {
+    float:none;
+    color:white !important;
+    font-size: 25px;
+
+}
+
+.btn-menu {
+    margin: 15px;
+}
