--- a/public_html/css/login.css
+++ b/public_html/css/login.css
@@ -33,12 +33,12 @@
     margin-top: 21px;
     font-weight: bold;
 }
+
 .footer{
-    /*position: absolute;*/
-    
+    position: absolute;
     bottom: 0px;
     width: 100%;
-    height: 34.01px;
+    height: 64.01px;
 }
 
 .footer div img{
