change colors and logo

--- a/public_html/css/home.css
+++ b/public_html/css/home.css
@@ -79,7 +79,7 @@ and open the template in the editor.
 }
 .side div hr{
     width: 100%;
-    border: solid 2px #E60000;
+    border: solid 2px #b30000;
 }
 .bar{
     /*display: block;*/
