--- a/public_html/css/surveyInterface.css
+++ b/public_html/css/surveyInterface.css
@@ -6,7 +6,7 @@ body{
     font-size: 18px;
 }
 .navbar{
-    background-color: #E60000;
+    background-color: #b30000;
     min-height: 85px;
     display: flex;
     align-items: center;
