--- a/public_html/css/sync.css
+++ b/public_html/css/sync.css
@@ -17,7 +17,7 @@ and open the template in the editor.
 }
 
 .navbar{
-    background-color: #E60000;
+    background-color: #b30000;
     min-height: 85px;
     display: flex;
     align-items: center;
