--- a/public_html/apis/bootstrap/css/bootstrap-theme.css
+++ b/public_html/apis/bootstrap/css/bootstrap-theme.css
@@ -115,10 +115,10 @@ fieldset[disabled] .btn-default.active {
   background-image: none;
 }
 .btn-primary {
-  background-image: -webkit-linear-gradient(top, #e60000 0%, #a90000 100%);
-  background-image: -o-linear-gradient(top, #e60000 0%, #a90000 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#e60000), to(#a90000));
-  background-image: linear-gradient(to bottom, #e60000 0%, #a90000 100%);
+  background-image: -webkit-linear-gradient(top, #b30000 0%, #a90000 100%);
+  background-image: -o-linear-gradient(top, #b30000 0%, #a90000 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#b30000), to(#a90000));
+  background-image: linear-gradient(to bottom, #b30000 0%, #a90000 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe60000', endColorstr='#ffa90000', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   background-repeat: repeat-x;
@@ -337,10 +337,10 @@ fieldset[disabled] .btn-danger.active {
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:hover,
 .dropdown-menu > .active > a:focus {
-  background-image: -webkit-linear-gradient(top, #e60000 0%, #cd0000 100%);
-  background-image: -o-linear-gradient(top, #e60000 0%, #cd0000 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#e60000), to(#cd0000));
-  background-image: linear-gradient(to bottom, #e60000 0%, #cd0000 100%);
+  background-image: -webkit-linear-gradient(top, #b30000 0%, #cd0000 100%);
+  background-image: -o-linear-gradient(top, #b30000 0%, #cd0000 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#b30000), to(#cd0000));
+  background-image: linear-gradient(to bottom, #b30000 0%, #cd0000 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe60000', endColorstr='#ffcd0000', GradientType=0);
   background-color: #cd0000;
@@ -407,10 +407,10 @@ fieldset[disabled] .btn-danger.active {
   .navbar .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #fff;
-    background-image: -webkit-linear-gradient(top, #e60000 0%, #cd0000 100%);
-    background-image: -o-linear-gradient(top, #e60000 0%, #cd0000 100%);
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#e60000), to(#cd0000));
-    background-image: linear-gradient(to bottom, #e60000 0%, #cd0000 100%);
+    background-image: -webkit-linear-gradient(top, #b30000 0%, #cd0000 100%);
+    background-image: -o-linear-gradient(top, #b30000 0%, #cd0000 100%);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#b30000), to(#cd0000));
+    background-image: linear-gradient(to bottom, #b30000 0%, #cd0000 100%);
     background-repeat: repeat-x;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe60000', endColorstr='#ffcd0000', GradientType=0);
   }
@@ -465,10 +465,10 @@ fieldset[disabled] .btn-danger.active {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffebebeb', endColorstr='#fff5f5f5', GradientType=0);
 }
 .progress-bar {
-  background-image: -webkit-linear-gradient(top, #e60000 0%, #b30000 100%);
-  background-image: -o-linear-gradient(top, #e60000 0%, #b30000 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#e60000), to(#b30000));
-  background-image: linear-gradient(to bottom, #e60000 0%, #b30000 100%);
+  background-image: -webkit-linear-gradient(top, #b30000 0%, #b30000 100%);
+  background-image: -o-linear-gradient(top, #b30000 0%, #b30000 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#b30000), to(#b30000));
+  background-image: linear-gradient(to bottom, #b30000 0%, #b30000 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe60000', endColorstr='#ffb30000', GradientType=0);
 }
@@ -518,10 +518,10 @@ fieldset[disabled] .btn-danger.active {
 .list-group-item.active:hover,
 .list-group-item.active:focus {
   text-shadow: 0 -1px 0 #b30000;
-  background-image: -webkit-linear-gradient(top, #e60000 0%, #c00000 100%);
-  background-image: -o-linear-gradient(top, #e60000 0%, #c00000 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#e60000), to(#c00000));
-  background-image: linear-gradient(to bottom, #e60000 0%, #c00000 100%);
+  background-image: -webkit-linear-gradient(top, #b30000 0%, #c00000 100%);
+  background-image: -o-linear-gradient(top, #b30000 0%, #c00000 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#b30000), to(#c00000));
+  background-image: linear-gradient(to bottom, #b30000 0%, #c00000 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe60000', endColorstr='#ffc00000', GradientType=0);
   border-color: #c00000;
@@ -544,10 +544,10 @@ fieldset[disabled] .btn-danger.active {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
 }
 .panel-primary > .panel-heading {
-  background-image: -webkit-linear-gradient(top, #e60000 0%, #cd0000 100%);
-  background-image: -o-linear-gradient(top, #e60000 0%, #cd0000 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#e60000), to(#cd0000));
-  background-image: linear-gradient(to bottom, #e60000 0%, #cd0000 100%);
+  background-image: -webkit-linear-gradient(top, #b30000 0%, #cd0000 100%);
+  background-image: -o-linear-gradient(top, #b30000 0%, #cd0000 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#b30000), to(#cd0000));
+  background-image: linear-gradient(to bottom, #b30000 0%, #cd0000 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe60000', endColorstr='#ffcd0000', GradientType=0);
 }
