--- a/public_html/apis/bootstrap/css/bootstrap.css
+++ b/public_html/apis/bootstrap/css/bootstrap.css
@@ -1343,7 +1343,7 @@ mark,
   color: #777777;
 }
 .text-primary {
-  color: #e60000;
+  color: #b30000;
 }
 a.text-primary:hover,
 a.text-primary:focus {
@@ -1379,7 +1379,7 @@ a.text-danger:focus {
 }
 .bg-primary {
   color: #fff;
-  background-color: #e60000;
+  background-color: #b30000;
 }
 a.bg-primary:hover,
 a.bg-primary:focus {
@@ -3121,7 +3121,7 @@ fieldset[disabled] .btn-default.focus {
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #e60000;
+  background-color: #b30000;
   border-color: #cd0000;
 }
 .btn-primary:focus,
@@ -3169,11 +3169,11 @@ fieldset[disabled] .btn-primary:focus,
 .btn-primary.disabled.focus,
 .btn-primary[disabled].focus,
 fieldset[disabled] .btn-primary.focus {
-  background-color: #e60000;
+  background-color: #b30000;
   border-color: #cd0000;
 }
 .btn-primary .badge {
-  color: #e60000;
+  color: #b30000;
   background-color: #ffffff;
 }
 .btn-success {
@@ -3576,7 +3576,7 @@ tbody.collapse.in {
   color: #ffffff;
   text-decoration: none;
   outline: 0;
-  background-color: #e60000;
+  background-color: #b30000;
 }
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
@@ -4103,7 +4103,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #e60000;
+  background-color: #b30000;
 }
 .nav-stacked > li {
   float: none;
@@ -4763,8 +4763,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > span:focus {
   z-index: 3;
   color: #ffffff;
-  background-color: #e60000;
-  border-color: #e60000;
+  background-color: #b30000;
+  border-color: #b30000;
   cursor: default;
 }
 .pagination > .disabled > span,
@@ -5146,7 +5146,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #ffffff;
   text-align: center;
-  background-color: #e60000;
+  background-color: #b30000;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -5310,8 +5310,8 @@ button.list-group-item {
 .list-group-item.active:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #e60000;
-  border-color: #e60000;
+  background-color: #b30000;
+  border-color: #b30000;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -5707,22 +5707,22 @@ button.list-group-item-danger.active:focus {
   border-bottom-color: #dddddd;
 }
 .panel-primary {
-  border-color: #e60000;
+  border-color: #b30000;
 }
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #e60000;
-  border-color: #e60000;
+  background-color: #b30000;
+  border-color: #b30000;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #e60000;
+  border-top-color: #b30000;
 }
 .panel-primary > .panel-heading .badge {
-  color: #e60000;
+  color: #b30000;
   background-color: #ffffff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #e60000;
+  border-bottom-color: #b30000;
 }
 .panel-success {
   border-color: #d6e9c6;
