--- a/public_html/css/login.css
+++ b/public_html/css/login.css
@@ -12,6 +12,9 @@
     background: url("../img/login-background.png") no-repeat fixed;
     background-size: 100% 100%;
 }
+.login-miele-logo{
+    margin: 20px;
+}
 .login-wrapper{
     margin-top: 110px; 
     margin-bottom: 100px;
