--- a/public_html/css/lines.css
+++ b/public_html/css/lines.css
@@ -120,12 +120,15 @@ and open the template in the editor.
     filter: drop-shadow(5px 5px 3px #a1a1a1);*/
 }
 
-.box .surveyType-icon .img{
-    -webkit-filter: drop-shadow(10px 10px 5px #a1a1a1);
-    -moz-filter: drop-shadow(10px 10px 5px #a1a1a1);
-    -ms-filter: drop-shadow(10px 10px 5px #a1a1a1);
-    -o-filter: drop-shadow(10px 10px 5px #a1a1a1);
-    filter: drop-shadow(10px 10px 5px #a1a1a1);
+.box .surveyType-icon .icon{
+    position: absolute;
+    width: 85%;
+    height: auto;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 50px;
+    left: 0;
 }
 
 .box .button-play{
