--- a/public_html/css/home.css
+++ b/public_html/css/home.css
@@ -14,6 +14,42 @@ and open the template in the editor.
     padding: 0;
 }*/
 
+.miele-logo{
+    height: 41px;
+    margin-left: 34%;
+    margin-top: 2%;
+}
+
+.searcher-content{
+    top: 0px;
+    height: 51px;
+    background-color: #464646;
+}
+
+.glyphicon-search{
+    color: #b30000;
+}
+
+.input-group-addon{
+    background-color: #e8e8e8;
+    border-radius: 22px;
+    border-right: none;
+}
+
+.form-control{
+    background-color: #e8e8e8;
+    border-radius: 22px;
+    border-left: none;
+    border-right: none;
+    color: black;
+}
+
+.navbar-collapse{
+    padding-left: 100px;
+    width: 400px;
+    float: right;
+}
+
 .container{
     margin: 0px;
     padding: 0px;
