--- a/public_html/css/lines.css
+++ b/public_html/css/lines.css
@@ -13,23 +13,27 @@ and open the template in the editor.
     position: absolute;
     width: 100%;
     height: 100%;
-    /*background: url("../img/productos-background.png") no-repeat fixed;*/
+    background: url("../img/productos-background.png") no-repeat fixed;
     /*background-color: white;*/
     background-size: 100% 100%;
+    z-index: -1;
 }
 
+.pageWrapper{
+    margin: 0px;
+    padding: 0px;
+}
 
 
 .miele-logo{
     height: 41px;
-    margin-left: 25%;
+    margin-left: 34%;
     margin-top: 2%;
 }
 
 .searcher-content{
     top: 0px;
     height: 51px;
-    margin-top: 30px;
     background-color: #464646;
 }
 .boxes-content{
@@ -83,6 +87,7 @@ and open the template in the editor.
     background-color: white;
     box-shadow: 5px 5px #d7d7d7;
     text-align: center;
+    background-color: transparent;
 }
 
 .box .survey-type-title{
@@ -104,6 +109,8 @@ and open the template in the editor.
 }
 
 .box .surveyType-icon{
+    padding: 0px;
+    margin: 0px;
     position: absolute;
     width: 85%;
     height: 85%;
