--- a/public_html/css/menu.css
+++ b/public_html/css/menu.css
@@ -18,16 +18,19 @@
 }
 
 .menu-wrapper.toggled {
-    padding-left: 250px;
+    /*padding-left: 250px;*/
 }
 
+
 #sidebar-wrapper {
+    opacity: 0.85;
     z-index: 1000;
     position: fixed;
     left: 250px;
     width: 0;
     top: 0px;
     height: 100%;
+    margin-top: 51px;
     margin-left: -250px;
     overflow-y: auto;
     background: #000;
@@ -38,7 +41,7 @@
 }
 
 .menu-wrapper.toggled #sidebar-wrapper {
-    width: 250px;
+    width: 350px;
 }
 
 .page-content-wrapper {
@@ -57,9 +60,9 @@
 .sidebar-nav {
     position: absolute;
     top: 0;
-    width: 250px;
+    width: 350px;
     margin: 0;
-    padding: 0;
+    padding: 20px;
     list-style: none;
 }
 
