--- a/public_html/css/productDesc.css
+++ b/public_html/css/productDesc.css
@@ -143,49 +143,153 @@ and open the template in the editor.
     list-style-type: disc;
 }
 
-.box .product-button{
-    width: 50%;
-    height: 40px;
-    bottom: 20px;
-    position: absolute;
-    background-color: #730609;
-    color: white;
-    font-size: 19px;
-    padding: 6px;
-    left: 25%;
-}
-
-.box .surveyType-icon{
-    position: absolute;
-    width: 70%;
-    height: 70%;
-    margin: auto;
-    top: 0;
-    right: 0;
-    bottom: 80px;
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
     left: 0;
-/*
-    -webkit-filter: drop-shadow(5px 5px 3px #a1a1a1);
-    -moz-filter: drop-shadow(5px 5px 3px #a1a1a1);
-    -ms-filter: drop-shadow(5px 5px 3px #a1a1a1);
-    -o-filter: drop-shadow(5px 5px 3px #a1a1a1);
-    filter: drop-shadow(5px 5px 3px #a1a1a1);*/
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-.box .surveyType-icon .img{
-    -webkit-filter: drop-shadow(10px 10px 5px #a1a1a1);
-    -moz-filter: drop-shadow(10px 10px 5px #a1a1a1);
-    -ms-filter: drop-shadow(10px 10px 5px #a1a1a1);
-    -o-filter: drop-shadow(10px 10px 5px #a1a1a1);
-    filter: drop-shadow(10px 10px 5px #a1a1a1);
+.modal-header {
+    padding: 2px 16px;
+    background-color: transparent;
+    color: black;
+    border-bottom: 0px solid white;
 }
 
-.box .button-play{
-    position: absolute;
-    bottom: 90px;
-    right: 20px;
+.modal-body {padding: 2px 16px;}
+
+.modal-footer {
+    padding: 2px 16px;
+    background-color: white;
+    color: black;
+    border-top: 0px solid white;
 }
 
-.box .surveyType-icon img{
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: 10% auto; /* 15% from the top and centered */
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
 
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+.close {
+    color: black;
+    float: right;
+    font-size: 65px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+    display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: #747474;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+
+.prev {
+    left: 100px;
+}
+
+.next {
+  right: 100px;
+  border-radius: 3px 0 0 3px;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dott {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+.slider-img {
+    width: 55%;
+    height: 55%;
+    margin-left: 22%;
+}
+
+.dot-img {
+    width: 100px;
+    height: 100px;
+    margin-left: 5px;
+    margin-right: 5px;   
+    margin-bottom: 10px;
 }
