--- a/public_html/css/productDesc.css
+++ b/public_html/css/productDesc.css
@@ -15,7 +15,7 @@ and open the template in the editor.
     height: 100%;
     /*background: url("../img/productos-background.png") no-repeat fixed;*/
     /*background-color: white;*/
-    background-size: 100% 100%;
+    background-size: 100% 50%;
 }
 
 .miele-logo{
@@ -34,8 +34,8 @@ and open the template in the editor.
     /*position: relative;*/
     padding-left: 0px;
     padding-right: 0px;
-    overflow-y: auto;
-    padding-bottom: 150px;
+    overflow-y: hidden;
+    padding-bottom: 50px;
 }
 
 .box-content{
@@ -170,6 +170,7 @@ and open the template in the editor.
     background-color: white;
     color: black;
     border-top: 0px solid white;
+    text-align: center;
 }
 
 .modal-content {
